@@ -129,7 +129,7 @@ def create_create_plan(prefix, conda, spec_strings):
         # find the associated dependencies
         deps = idx.get_deps(pkgs)
         deps = idx.find_matches(env_constraints, deps)
-        deps = idx.feature_select(deps, track_features) 
+        deps = idx.feature_select(deps, track_features)
         deps = channel_select(deps, conda.channel_urls)
         deps = newest_packages(deps)
         log.debug("updated dependencies: %s\n" % deps)
@@ -260,7 +260,7 @@ def create_install_plan(env, spec_strings):
         track_features |= pkg.track_features
     log.debug("track_features: %s\n" % track_features)
 
-    pkgs = idx.feature_select(pkgs, track_features) 
+    pkgs = idx.feature_select(pkgs, track_features)
     pkgs = newest_packages(pkgs)
 
     # check to see if this is a meta-package situation (and handle it if so)
@@ -292,7 +292,7 @@ def create_install_plan(env, spec_strings):
         # now we need to recompute the compatible packages using the updated package specifications
         pkgs = idx.find_compatible_packages(specs)
         pkgs = idx.find_matches(env_constraints, pkgs)
-        pkgs = idx.feature_select(pkgs, track_features) 
+        pkgs = idx.feature_select(pkgs, track_features)
         pkgs = channel_select(pkgs, env.conda.channel_urls)
         pkgs = newest_packages(pkgs)
         log.debug("updated packages: %s\n" % pkgs)
@@ -300,7 +300,7 @@ def create_install_plan(env, spec_strings):
         # find the associated dependencies
         deps = idx.get_deps(pkgs)
         deps = idx.find_matches(env_constraints, deps)
-        deps = idx.feature_select(deps, track_features) 
+        deps = idx.feature_select(deps, track_features)
         deps = channel_select(deps, env.conda.channel_urls)
         deps = newest_packages(deps)
         log.debug("updated dependencies: %s\n" % deps)
